# pdf-merger

./: .gitignore  CLAUDE.md  README.md  environment.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
pdf_gluer/: __init__.py
pdf_merger/: __init__.py  core.py
