[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-gluer"
version = "0.1.0"
description = "Batch merge related PDF files in a directory"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tiago Silva", email = "eng.tiago.silva@gmail.com" }]
dependencies = ["tqdm", "pikepdf"]
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/tsilva/pdf-merger"
Repository = "https://github.com/tsilva/pdf-merger"

[project.scripts]
pdf-gluer = "pdf_gluer:main"
